--- a/views/answer.pug
+++ b/views/answer.pug
@@ -1,6 +1,5 @@
 .answers
-  span=ansCount || 0
-    | &nbsp; Answers
+  span=`${ansCount || 0} Answers`
   if(ansCount)
     each answer in qd.answers
       .question-body
