--- a/views/postAnswer.pug
+++ b/views/postAnswer.pug
@@ -10,4 +10,4 @@ mixin getQuestionId(qId)
         button(onclick=`postAnswer('${userInfo && userInfo.id}','${qId}',this)`) Post Answer
         button.cancel-btn.hide(onclick=`makeAnswerUneditable('${qId}')`) Cancel
         button.save-btn.hide(onclick=`updateAnswer('${qId}')`) Save
-        .popUp.hide abcd
+        .popUp.hide
