--- a/views/menuBar.pug
+++ b/views/menuBar.pug
@@ -1,5 +1,5 @@
 div(class="menubar")
-  -let list = [{tag:"Home",url:'/home'},{tag:"Your Questions",url:'/yourQuestions'},{tag:"Your Answers",url:'/yourAnswers'},{tag:"Your Tags",url:''},{tag:"Your Profile",url:`/viewProfile?id=${userInfo && userInfo.id}`}]
-  each item in list
-    -const className = (!userInfo && item.tag !== 'Home') ? 'hide' : ''
-    div(class=`menu-item ${className}` id=`${item.url}` item.url ? onclick=`window.location.href='${item.url}'` )=item.tag
+  -let list = {"Home":'/home', "Your Questions":'/yourQuestions', "Your Answers":'/yourAnswers', "Your Tags":'', "Your Profile": `/viewProfile?id=${userInfo && userInfo.id}`}
+  each url, menuItem  in list
+    -const className = (!userInfo && menuItem !== 'Home') ? 'hide' : ''
+    div(class=`menu-item ${className}` id=`${url}` onclick=`window.location.href='${url}'` )=menuItem
