--- a/views/questions.pug
+++ b/views/questions.pug
@@ -11,7 +11,8 @@ mixin getHeader(header)
           -const {id,ownerId,title,body,receivedAt,username,ansCount,isAnsAccepted,tags} = question
           .question
             -const isAnyAnsAccepted = isAnsAccepted.some(a=>a.isAnsAccepted);
-            -const className = isAnyAnsAccepted ? "countName-ac" : ansCount > 0? "countName-a":"countName"
+            -let className = ansCount ? "countName-a":"countName"
+            -className = isAnyAnsAccepted ? "countName-ac" : className
             div(class=className)
               .count=ansCount || 0
                 .ansCount answers
