|#28|Santhosh/Ragini| changed the title of all pages

--- a/views/home.pug
+++ b/views/home.pug
@@ -2,7 +2,7 @@ doctype
 html(lang='en')
   head
     meta(charset='utf-8')
-    title home page
+    title Inquire - Home
     link(rel="stylesheet", href="/css/home.css")
     script(src="../js/home.js")
     script(src="../js/renderingDates.js")
