--- a/views/newProfile.pug
+++ b/views/newProfile.pug
@@ -2,7 +2,7 @@ doctype
 html(lang='en')
   head
     meta(charset='utf-8')
-    title New Profile
+    title Inquire - New Profile
     link(rel="stylesheet", href="/css/newProfile.css")
   body(style="margin:0")
     #container
