--- a/views/loginPage.pug
+++ b/views/loginPage.pug
@@ -2,7 +2,7 @@ doctype
 html(lang='en')
   head
     meta(charset='utf-8')
-    title Login Page
+    title Inquire - Login
     link(rel="stylesheet", href="/css/login.css")
   body
     #container
