--- a/views/profilePage.pug
+++ b/views/profilePage.pug
@@ -2,7 +2,7 @@ doctype
 html(lang='en')
   head
     meta(charset='utf-8')
-    title home page
+    title Inquire - Profile
     link(rel="stylesheet", href="/css/home.css")
     link(rel="stylesheet", href="/css/profilePage.css")
     script(src="/js/home.js")
