--- a/views/questionPage.pug
+++ b/views/questionPage.pug
@@ -1,7 +1,7 @@
 html(lang='en')
   head
     meta(charset='utf-8')
-    title QuestionPage
+    title Inquire - Question
     link(rel="stylesheet", href="/css/home.css")
     link(rel="stylesheet", href="/css/questionPage.css")
     link(rel="stylesheet", href="/css/postComment.css")
