--- a/views/questionEditor.pug
+++ b/views/questionEditor.pug
@@ -1,6 +1,7 @@
 html
   head
     title Inquire
+    link(rel="stylesheet", href="/css/titlebar.css")
     link(rel="stylesheet", href="/css/home.css")
     link(rel="stylesheet", href="/css/postQuestion.css")
     link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.1/styles/hopscotch.min.css")
