--- a/public/css/login.css
+++ b/public/css/login.css
@@ -5,52 +5,44 @@ body {
   word-break: break-word;
 }
 
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
 #container {
   position: absolute;
   top: 0vh;
   width: 100vw;
   height: 100%;
-  display: flex;
-  flex-direction: column;
   background: url(../images/bg.jpg) no-repeat;
   background-size: 100%;
+  text-align: center;
 }
 
+.quotation {
+  margin-top: 4%;
+  margin-bottom: 5%;
+}
 .quote {
-  margin-right: auto;
-  margin-left: auto;
   font-size: xxx-large;
   font-family: cursive;
   font-weight: 800;
   color: white;
 }
-#container div:first-child {
-  margin-top: 4%;
-}
-
-#container div:nth-child(2) {
-  margin-bottom: 5%;
-}
 
 .box {
-  margin-right: auto;
-  margin-left: auto;
-  display: flex;
-  flex-direction: column;
+  align-self: center;
   align-items: center;
   width: 20%;
   background-color: white;
   padding-top: 2%;
-  box-shadow: 2.8px 2.2px rgba(0, 0, 0, 0.034), 0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06), 0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086), 0 100px 80px rgba(0, 0, 0, 0.12);}
+  box-shadow: 2.8px 2.2px rgba(0, 0, 0, 0.034), 0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06), 0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086), 0 100px 80px rgba(0, 0, 0, 0.12);
+} 
 
-#formFooter {
-  display: flex;
-  flex-direction: column;
-  margin: 0 !important;
-}
-
-#cancelButton, #formFooter > button {
+button {
   height: 6vh;
+  width: 80%;
   font-size: larger;
   background-image: linear-gradient(to right,#16b3d6, #00a8cc ,#16b3d6);
   color: #ffffff;
@@ -58,9 +50,10 @@ body {
   transition: border .3s ease-in;
   margin-bottom: 11%;
   outline: none;
+  cursor: pointer;
 }
 
-#formFooter > a:hover, #formFooter > button:hover {
+button:hover {
    box-shadow: 0px 0px 3px 0px rgb(66, 66, 66);
 }
 
