--- a/public/css/questionPage.css
+++ b/public/css/questionPage.css
@@ -164,7 +164,7 @@ width: 80%;
   margin-left: 2vw;
   padding: 0;
 }
-.flex-row {
+.footer {
   width: 82%;
   display: flex;
   flex-direction: row;
