--- a/views/comments.pug
+++ b/views/comments.pug
@@ -3,7 +3,7 @@ mixin getComments(comments)
     -const {id,ownerId,responseId,comment,type,receivedAt,username} = Comment
     div(id=`c${id}`)
       .comment=comment
-      .flex-row.border
+      .footer.border
         .edit-btns
           if(userInfo && userInfo.id==ownerId)
             .edit-btn(onclick=`makeCommentEditable(this,'c${id}')`) edit
