--- a/views/home.pug
+++ b/views/home.pug
@@ -3,6 +3,8 @@ html(lang='en')
   head
     meta(charset='utf-8')
     title Inquire - Home
+    link(rel="stylesheet", href="/css/titlebar.css")
+    link(rel="stylesheet", href="/css/menubar.css")
     link(rel="stylesheet", href="/css/home.css")
     script(src="../js/home.js")
     script(src="../js/renderingDates.js")
