--- a/views/profilePage.pug
+++ b/views/profilePage.pug
@@ -3,6 +3,8 @@ html(lang='en')
   head
     meta(charset='utf-8')
     title Inquire - Profile
+    link(rel="stylesheet", href="/css/titlebar.css")
+    link(rel="stylesheet", href="/css/menubar.css")
     link(rel="stylesheet", href="/css/home.css")
     link(rel="stylesheet", href="/css/profilePage.css")
     script(src="/js/home.js")
