--- a/views/questionPage.pug
+++ b/views/questionPage.pug
@@ -2,6 +2,8 @@ html(lang='en')
   head
     meta(charset='utf-8')
     title Inquire - Question
+    link(rel="stylesheet", href="/css/titlebar.css")
+    link(rel="stylesheet", href="/css/menubar.css")
     link(rel="stylesheet", href="/css/home.css")
     link(rel="stylesheet", href="/css/questionPage.css")
     link(rel="stylesheet", href="/css/postComment.css")
@@ -23,7 +25,7 @@ html(lang='en')
       else
         -const {ownerId,title,body,receivedAt,ansCount,vote,tags,comments,voteDetails} = questionDetails
         -const qd = questionDetails
-        .container-h
+        .container-h.flex-row
           .question-title
             .question-title-h=title
             .question-title-b
