--- a/public/css/newProfile.css
+++ b/public/css/newProfile.css
@@ -1,3 +1,10 @@
+body {
+  margin: auto 0px;
+  font-family: Helvetica, sans-serif;
+  word-break: break-word;
+  overflow-x: hidden;
+}
+
 #container {
   position: absolute;
   top: 0vh;
@@ -9,9 +16,12 @@
   background-size: 100%;
 }
 
-form {
+.flex-column {
   display: flex;
   flex-direction: column;
+}
+
+form {
   align-items: center;
   width: 28%;
   background-color: white;
@@ -25,8 +35,9 @@ legend {
   padding-bottom: 2%;
   font-weight: 600;
 }
+
 form legend:nth-child(2) {
-padding-bottom: 8%;
+  padding-bottom: 8%;
 }
 
 input {
@@ -54,7 +65,7 @@ label {
   padding: 2%;
   margin-left: 1%;
   outline: none;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Helvetica, sans-serif;
   font-size: medium;
 }
 
@@ -67,23 +78,21 @@ label {
 }
 
 #cancelButton {
-  display: flex;
-  flex-direction: column;
+  text-align: center;
   justify-content: center;
   text-decoration: none;
-  text-align: center;
 }
 
 #cancelButton, #formFooter > button {
   width: 30%;
   height: 5vh;
   font-size: larger;
-  background-image: linear-gradient(to right,#16b3d6, #00a8cc ,#16b3d6);
+  background-color: #00a8cc;
   color: #ffffff;
   border: none;
-  transition: border .3s ease-in;
+  cursor: pointer;
 }
 
 #formFooter > a:hover, #formFooter > button:hover {
-   box-shadow: 0px 0px 3px 0px rgb(66, 66, 66);
+  box-shadow: 0px 0px 3px 0px rgb(66, 66, 66);
 }
