--- a/views/questionPage.pug
+++ b/views/questionPage.pug
@@ -52,5 +52,5 @@ html(lang='en')
           include postComment
           +comments_editor(qd.id,'questions')
         include postAnswer
-        +getQuestionId(qd.id)
+        +getPostAnswer(qd.id)
         include answer
