--- a/views/answer.pug
+++ b/views/answer.pug
@@ -17,11 +17,11 @@
           .vote-box
             include votes
             +getVoteBox(answer.id, answer.votes, answer.voteDetails, 'answers')
-      .footer     
-        .edit-btns
+      .footer.flex-row    
+        .edit-btns.flex-row
           if(userInfo && answer.ownerId == userInfo.id)
             .edit-btn(onclick=`makeAnswerEditable(this,'${answer.id}')`) edit
-        .question-title-b.answer-author
+        .question-title-b.flex-row.answer-author
           .avatar-div
             img.author-avatar(src=`${answer.avatar}`, alt="alt" onClick=`window.location.href='/viewProfile?id=${answer.ownerId}'`)
           div
