|#22|Ragini/Rivu| added yourTags that will show users tags

--- a/views/home.pug
+++ b/views/home.pug
@@ -12,4 +12,4 @@ html(lang='en')
     include titleBar
     include menuBar
     include questions
-    +getHeader('All the Questions')
+    +getQuestions('All the Questions')
