--- a/views/questions.pug
+++ b/views/questions.pug
@@ -1,4 +1,4 @@
-mixin getHeader(header)
+mixin getQuestions(header)
   script(src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.7.0/moment.min.js" type="text/javascript")
   .container
     .container-h.flex-row
