--- a/public/css/postAnswer.css
+++ b/public/css/postAnswer.css
@@ -37,35 +37,11 @@
   left:0 !important
 }
 
-pre {
-  white-space: pre-wrap;
-  margin-bottom: 5px;
-  margin-top: 5px;
-  padding: 5px 10px;
-}
-
-textarea::placeholder {
-  opacity: 0.7;
-  font-size: medium;
-  font-family: Helvetica, sans-serif;
-}
-textarea {
-  margin-bottom: 3%;
-  margin-top: 1%;
-  width: 100%;
-  font-size: large;
-  outline: none;
-  padding:1%;
-  padding-left:1%;
-  font-family: Helvetica, sans-serif;
-}
 .formFooter {
-  display: flex;
-  flex-direction: row;
   width: 80%;
   margin-bottom: 1.5%;
 }
-.formFooter > button, .cancel-btn, .save-btn {
+.formFooter > button {
   margin-right:5%;
   width: 30%;
   height: 5vh;
@@ -73,11 +49,12 @@ textarea {
   background-color: #00a8cc;
   color: #ffffff;
   border: none;
-  transition: border .3s ease-in;
   outline: none;
+  transition: border .3s ease-in;
 }
 .formFooter > a:hover, .formFooter > button:hover {
-   box-shadow: 0px 0px 3px 0px rgb(66, 66, 66);
+  box-shadow: 0px 0px 3px 0px rgb(66, 66, 66);
+  cursor: pointer;
 }
 
 .popUp {
