--- a/public/css/postComment.css
+++ b/public/css/postComment.css
@@ -1,18 +1,27 @@
+.add-comment {
+  margin: 1vh 2vw;
+  color: #f48024;
+}
+.add-comment span:first-child:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
 .new_comment_box {
   align-self: center;
   width: 80%;
   text-align: left;
-  margin-left: 2vw;
+  margin-left: 3vw;
 }
 
 .new_comment_box > input::placeholder {
   opacity: 0.7;
   font-size: medium;
-  font-family: Helvetica, sans-serif;
 }
+
 .new_comment_box > input {
-  margin-bottom: 3%;
-  margin-top: 2%;
+  margin: 2% 0 3% 0;
+  padding:1%;
   width: 100%;
   height: 3.5vh;
   font-size: 14px;
@@ -20,16 +29,4 @@
   outline: none;
   border: none;
   border-bottom: solid 1px rgba(41,41,41,0.5);
-  overflow: unset;
-  padding:1%;
-  padding-left:1%;
-  font-family: Helvetica, sans-serif;
-}
-.add-comment {
-  margin: 1vh 2vw;
-  cursor: pointer;
-  color: #f48024;
-}
-.add-comment:hover {
-  text-decoration: underline;
 }
