--- a/views/editQuestion.pug
+++ b/views/editQuestion.pug
@@ -1,3 +1,3 @@
 include questionEditor
 -const {id, title, body, tags} = questionDetails
-+getlisteners(`/updateQuestion/${id}`, `/question/${id}`, title, tags, body)
++getPostQuestion(`/updateQuestion/${id}`, `/question/${id}`, title, tags, body)
