--- a/views/questionEditor.pug
+++ b/views/questionEditor.pug
@@ -11,9 +11,9 @@ html
     script(src="https://cdn.quilljs.com/1.3.6/quill.min.js")
     script(src="/js/editor.js")
     script(src="/js/postQuestion.js")
-  body(onload="renderEditor()")
+  body()
     include titleBar
-    mixin getlisteners(listener, location, title, tags, body)
+    mixin getPostQuestion(listener, location, title, tags, body)
       #container
         p.pageHeading Post Your Question
         .editor-box
