--- a/public/css/postQuestion.css
+++ b/public/css/postQuestion.css
@@ -3,14 +3,11 @@
   position: absolute;
   top: 8vh;
   height: 90vh;
-  display: flex;
-  flex-direction: column;
   text-align: center;
 }
 
 .pageHeading{
   font-size :xx-large;
-  font-family:Helvetica, sans-serif;
   color: rgba(41,41,41,0.8);
   margin: 1%;
 }
@@ -67,12 +64,9 @@ input[name="title"], .tags-list, .tag-suggestions {
 input::placeholder{
   opacity: 0.7;
   font-size: large;
-  font-family: Helvetica, sans-serif;
 }
 
-.tags-list {    
-  display: flex;
-  flex-direction: row;
+.tags-list { 
   margin-bottom: 0;
   width: 100%;
   padding: 0;
@@ -87,9 +81,6 @@ input::placeholder{
 }
 
 .tags {
-  display: flex;
-  flex-direction: row;
-  list-style: none;
   overflow: hidden;
   padding: 1vh 0vh 1vh 1vh;
 }
@@ -116,21 +107,17 @@ input::placeholder{
   margin: 1vh;
 }
 #formFooter {
-  display: flex;
-  flex-direction: row;
   width: 80%;
   margin-top: 2%;
 }
 
-#cancelButton {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+a {
   text-decoration: none;
   text-align: center;
+  justify-content: center;
 }
 
-#cancelButton, #formFooter > button {
+a, #formFooter > button {
   margin-right:5%;
   width: 20%;
   height: 5vh;
@@ -138,12 +125,13 @@ input::placeholder{
   background-color: #00a8cc;
   color: #ffffff;
   border: none;
-  transition: border .3s ease-in;
   outline: none;
+  transition: border .3s ease-in;
 }
 
 #formFooter > a:hover, #formFooter > button:hover {
-   box-shadow: 0px 0px 3px 0px rgb(66, 66, 66);
+  box-shadow: 0px 0px 3px 0px rgb(66, 66, 66);
+  cursor: pointer;
 }
 
 .blind {
