|#30|Santhosh/Satheesh| introduced SASS and changed the login.css file to login.sass

--- a/views/loginPage.pug
+++ b/views/loginPage.pug
@@ -3,7 +3,7 @@ html(lang='en')
   head
     meta(charset='utf-8')
     title Inquire - Login
-    link(rel="stylesheet", href="/css/login.css")
+    link(rel="stylesheet", href="/styles/login.css")
   body
     #container.flex-column
       .quotation
