--- a/public/css/home.css
+++ b/public/css/home.css
@@ -106,7 +106,7 @@ body {
   background: #eee;
   color: hsl(0deg 0% 16% / 80%);
   display: inline-block;
-  padding: 0.5vh 0.2vw 0.5vh 0.5vh;
+  padding: 0vh 0.5vw 0.2vh 0.5vw;
   position: relative;
   margin-right: 1vw;
   text-decoration: none;
