|#30|Santhosh/Satheesh| converted all css files to sass files
not deleted the old css files

--- a/views/newProfile.pug
+++ b/views/newProfile.pug
@@ -3,7 +3,7 @@ html(lang='en')
   head
     meta(charset='utf-8')
     title Inquire - New Profile
-    link(rel="stylesheet", href="/css/newProfile.css")
+    link(rel="stylesheet", href="/styles/newProfile.css")
   body(style="margin:0")
     #container
       form.flex-column(action="/newProfile", method="post")
