--- a/views/postAnswer.pug
+++ b/views/postAnswer.pug
@@ -1,4 +1,4 @@
-link(rel="stylesheet", href="/css/postAnswer.css")
+link(rel="stylesheet", href="/styles/postAnswer.css")
 script(src="/js/editor.js")
 mixin getPostAnswer(qId)
   .post-answer
