--- a/views/profilePage.pug
+++ b/views/profilePage.pug
@@ -3,10 +3,10 @@ html(lang='en')
   head
     meta(charset='utf-8')
     title Inquire - Profile
-    link(rel="stylesheet", href="/css/titlebar.css")
-    link(rel="stylesheet", href="/css/menubar.css")
-    link(rel="stylesheet", href="/css/home.css")
-    link(rel="stylesheet", href="/css/profilePage.css")
+    link(rel="stylesheet", href="/styles/titlebar.css")
+    link(rel="stylesheet", href="/styles/menubar.css")
+    link(rel="stylesheet", href="/styles/home.css")
+    link(rel="stylesheet", href="/styles/profilePage.css")
     script(src="/js/home.js")
   body( onload=`highlightMenuItem('/viewProfile?id=${details && details.id}')`)
     include titleBar
