--- a/views/questionEditor.pug
+++ b/views/questionEditor.pug
@@ -1,9 +1,9 @@
 html
   head
     title Inquire
-    link(rel="stylesheet", href="/css/titlebar.css")
-    link(rel="stylesheet", href="/css/home.css")
-    link(rel="stylesheet", href="/css/postQuestion.css")
+    link(rel="stylesheet", href="/styles/titlebar.css")
+    link(rel="stylesheet", href="/styles/home.css")
+    link(rel="stylesheet", href="/styles/postQuestion.css")
     link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.1/styles/hopscotch.min.css")
     link(rel="stylesheet", href="https://cdn.quilljs.com/1.3.6/quill.snow.css")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.1/highlight.min.js")
