--- a/views/home.pug
+++ b/views/home.pug
@@ -3,9 +3,9 @@ html(lang='en')
   head
     meta(charset='utf-8')
     title Inquire - Home
-    link(rel="stylesheet", href="/css/titlebar.css")
-    link(rel="stylesheet", href="/css/menubar.css")
-    link(rel="stylesheet", href="/css/home.css")
+    link(rel="stylesheet", href="/styles/titlebar.css")
+    link(rel="stylesheet", href="/styles/menubar.css")
+    link(rel="stylesheet", href="/styles/home.css")
     script(src="../js/home.js")
     script(src="../js/renderingDates.js")
   body(onload=`main()`)
