--- a/views/questionPage.pug
+++ b/views/questionPage.pug
@@ -2,11 +2,11 @@ html(lang='en')
   head
     meta(charset='utf-8')
     title Inquire - Question
-    link(rel="stylesheet", href="/css/titlebar.css")
-    link(rel="stylesheet", href="/css/menubar.css")
-    link(rel="stylesheet", href="/css/home.css")
-    link(rel="stylesheet", href="/css/questionPage.css")
-    link(rel="stylesheet", href="/css/postComment.css")
+    link(rel="stylesheet", href="/styles/titlebar.css")
+    link(rel="stylesheet", href="/styles/menubar.css")
+    link(rel="stylesheet", href="/styles/home.css")
+    link(rel="stylesheet", href="/styles/questionPage.css")
+    link(rel="stylesheet", href="/styles/postComment.css")
     link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.1/styles/hopscotch.min.css")
     link(rel="stylesheet", href="https://cdn.quilljs.com/1.3.6/quill.snow.css")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.1/highlight.min.js")
