--- a/sass/profilePage.sass
+++ b/sass/profilePage.sass
@@ -1,3 +1,5 @@
+@use "./defaultConfig" as *
+  
 .topBox 
   display: flex 
   margin: 5vh 3vw 
@@ -19,7 +21,7 @@
   font-weight: 600 
   margin-top: 5vh 
   margin-bottom: 3vh 
-  color: rgba(41,41,41,0.9) 
+  color: $black-dark 
 
 .label 
   font-size: larger 
