--- a/sass/menubar.sass
+++ b/sass/menubar.sass
@@ -1,3 +1,5 @@
+@use "./defaultConfig" as *
+  
 .menubar 
   width: 25vw 
   height: 92vh 
@@ -10,14 +12,14 @@
   margin: 1vh 3vw 1vh 4vw 
   padding: 1vh 0 1vh 1vw 
   cursor: pointer 
-  color: rgba(41, 41, 41, 0.9) 
+  color: $black-dark
   font-weight: 400  
 
 .menu-item:hover 
-  background-color:#f4f4f4 
+  background-color:$light-white 
   transition: background 0.2s ease-in   
 
 .highlight 
-  border-left: 0.3vw solid #00a8cc 
-  background-color: #f4f4f4 
-  color: rgba(41, 41, 41, 0.7)  
+  border-left: 0.3vw solid $blue 
+  background-color: $light-white 
+  color: $black-medium  
