--- a/sass/newProfile.sass
+++ b/sass/newProfile.sass
@@ -1,3 +1,5 @@
+@use "./defaultConfig" as *
+  
 body 
   margin: auto 0px 
   font-family: Helvetica, sans-serif 
@@ -28,7 +30,7 @@ form
 
 legend 
   font-size: large 
-  color: #00a8cc 
+  color: $blue 
   padding-bottom: 2% 
   font-weight: 600  
 
@@ -41,7 +43,7 @@ input
   margin-left: 1% 
   outline: none 
   border: none 
-  border-bottom: solid 1px rgba(41,41,41,0.5) 
+  border-bottom: solid 1px $black-light 
   font-size: medium 
 
 input:-webkit-autofill 
@@ -51,7 +53,7 @@ label
   font-size: small 
   margin: 1.5% 1% 
   width: 80% 
-  color: rgba(41,41,41,0.7)  
+  color: $black-medium  
 
 #bio 
   width: 78% 
@@ -78,8 +80,8 @@ label
   width: 30% 
   height: 5vh 
   font-size: larger 
-  background-color: #00a8cc 
-  color: #ffffff 
+  background-color: $blue
+  color: $white 
   border: none 
   cursor: pointer  
 
