--- a/sass/postAnswer.sass
+++ b/sass/postAnswer.sass
@@ -1,11 +1,13 @@
+@use "./defaultConfig" as *
+  
 .post-answer 
   margin-right: 4vw 
   margin-top: 2vh 
-  border-bottom: solid 2px rgba(41,41,41,0.5) 
+  border-bottom: solid 2px $black-light
 
 .post-answer > span 
   font-size: 20px 
-  color: #f48024 
+  color: $orange
 
 .post-answer > .editor-box 
   margin:1% 0vw 0% 2vw 
@@ -39,8 +41,8 @@
   width: 30% 
   height: 5vh 
   font-size: larger 
-  background-color: #00a8cc 
-  color: #ffffff 
+  background-color: $blue 
+  color: $white 
   border: none 
   outline: none 
   transition: border .3s ease-in 
