--- a/sass/questionPage.sass
+++ b/sass/questionPage.sass
@@ -1,3 +1,5 @@
+@use "./defaultConfig" as *
+  
 .question-title 
   font-size: xx-large 
 
@@ -17,18 +19,18 @@
   border-right: 2vw solid transparent 
   cursor: pointer 
 .up-arrow
-  border-bottom: 2.5vh solid rgba(41,41,41,0.6) 
+  border-bottom: 2.5vh solid $black-light 
   margin-bottom: 0.3vh 
 
 .down-arrow
-  border-top: 2.5vh solid rgba(41,41,41,0.6) 
+  border-top: 2.5vh solid $black-light 
   margin-top: 0.3vh 
 
 .highlightUpArrow 
-  border-bottom: 2.5vh solid #42B883 
+  border-bottom: 2.5vh solid $green 
 
 .highlightDownArrow 
-  border-top: 2.5vh solid #42B883 
+  border-top: 2.5vh solid $green 
 
 .question-title-h 
   word-break: break-word 
@@ -88,11 +90,11 @@
   padding: 0 2vw
 
 .q-post-comment
-  border-bottom: 2px solid rgba(41, 41, 41, 0.5) 
+  border-bottom: 2px solid $black-light 
   margin-right: 4vw 
 
 .a-post-comment 
-  border-bottom: 1px solid rgba(41, 41, 41, 0.5) 
+  border-bottom: 1px solid $black-light 
   margin-right: 4vw 
   margin-left: 2vw 
 
@@ -108,7 +110,7 @@
 
 .comment:focus 
   outline: none 
-  border-bottom: solid 1px rgba(41, 41, 41, 0.5) 
+  border-bottom: solid 1px $black-light 
   margin: 1vh 0 
   margin-left: 2vw 
   padding: 0 
@@ -120,7 +122,7 @@
   color: #f48024 
 
 .border 
-  border-bottom:1px dashed rgba(41, 41, 41, 0.5) 
+  border-bottom:1px dashed $black-light 
 
 .edit-q-btn 
   color: #f48024 
