--- a/sass/titlebar.sass
+++ b/sass/titlebar.sass
@@ -1,3 +1,5 @@
+@use "./defaultConfig" as *
+  
 .flex-row 
   display: flex 
   flex-direction: row 
@@ -8,7 +10,7 @@
 
 .titleBar 
   justify-content: space-between 
-  background: #00a8cc 
+  background: $blue
   position: fixed 
   width: 100vw 
   height: 8vh 
@@ -40,7 +42,7 @@
   align-self: center 
   height: 4vh 
   font-size: larger 
-  color: rgb(41, 41, 41) 
+  color: $black-dark 
   background-color: rgba(245, 245, 245, 0.9) 
   border: none 
   outline: none 
@@ -66,7 +68,7 @@
   visibility: hidden 
   width: 10vw 
   background-color: #555555e6 
-  color: #fff 
+  color: $white 
   text-align: center 
   position: absolute 
   top: 124% 
@@ -98,7 +100,7 @@
   border: none 
   outline: none 
   font-size: large 
-  color: rgb(41, 41, 41,0.8) 
+  color: $black-medium 
   cursor: pointer 
 
 .margin-auto 
