--- a/sass/home.sass
+++ b/sass/home.sass
@@ -1,10 +1,7 @@
 @use "./defaultConfig" as *
   
 body  
-  margin: auto 0px 
-  font-family: Helvetica, sans-serif 
-  word-break: break-word 
-  overflow-x: hidden 
+  @include body
  
 .container 
   text-align: justify 
