--- a/sass/login.sass
+++ b/sass/login.sass
@@ -1,9 +1,7 @@
 @use "./defaultConfig" as *
   
 body
-  margin: auto 0px
-  font-family: Helvetica, sans-serif
-  word-break: break-word
+  @include body
 
 .flex-column
   display: flex
@@ -21,6 +19,7 @@ body
 .quotation
   margin-top: 4%
   margin-bottom: 5%
+
 .quote
   font-size: xxx-large
   font-family: cursive
@@ -36,20 +35,15 @@ body
   box-shadow: 2.8px 2.2px rgba(0, 0, 0, 0.034), 0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06), 0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086), 0 100px 80px rgba(0, 0, 0, 0.12) 
 
 button
+  @include formFooter-btn
   height: 6vh
   width: 80%
-  font-size: larger
   background-image: linear-gradient(to right, $light-blue, $blue ,$light-blue)
-  color: $white
-  border: none
-  transition: border .3s ease-in
   margin-bottom: 11%
-  outline: none
-  cursor: pointer
 
 button:hover
-   box-shadow: 0px 0px 3px 0px rgb(66, 66, 66)
-
+  @include formFooter-hover
+  
 .legend
   font-size: xx-large
   text-align: center
