|#30|Santhosh/Satheesh| improved the formfooter css of the postAnswer

--- a/sass/postAnswer.sass
+++ b/sass/postAnswer.sass
@@ -30,13 +30,13 @@
   @include ql-tooltip
   
 .formFooter 
-  width: 80% 
+  width: 100% 
   margin-bottom: 1.5% 
 
 .formFooter > button 
   @include formFooter-btn
-  margin-right:5% 
-  width: 30% 
+  margin-right: 3%
+  padding: 0 1vw
   height: 5vh 
   background-color: $blue 
 
