--- a/sass/questionPage.sass
+++ b/sass/questionPage.sass
@@ -30,7 +30,7 @@
   border-bottom: 2.5vh solid $green 
 
 .highlightDownArrow 
-  border-top: 2.5vh solid $green 
+  border-top: 2.5vh solid $red 
 
 .question-title-h 
   word-break: break-word 
