--- a/sass/defaultConfig.sass
+++ b/sass/defaultConfig.sass
@@ -7,6 +7,7 @@ $black-medium: rgba(41, 41, 41, 0.7)
 $black-light: rgba(41, 41, 41, 0.5)
 $white: #ffffff
 $light-white: #f4f4f4
+$red: #ff3131
 
 @mixin body
   margin: auto 0px
